<resources>
    <string name="app_name">CoSpace</string>
    <string name="title_activity_main">MainActivity</string>

    <!--    bnv-->
    <string name="title_home">Home</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="title_chat">Chat</string>
    <string name="title_about_cospace">About CoSpace</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_input_bobot">Input Bobot</string>
    <string name="rating_category">Rating</string>
    <string name="nearest_location_category">Nearest Location</string>
    <string name="lower_price_category">Lower Price</string>
    <string name="insert_lower_price_priority">Insert a lower price priority</string>
    <string name="insert_nearest_location_priority">Insert a nearest location priority</string>
    <string name="insert_rating_priority">Insert a rating priority</string>
    <string name="submit">Submit</string>
    <string name="what_is_this_app_about">
        CoSpace is an Android-based mobile application that provides recommendations for co-working spaces in Malang City. This application provides a recommendation feature based on the user\'s priority factors. The priority factors consist of priority in terms of price, nearest location, and rating. In addition, users can make online bookings at the co-working space of their choice.
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="login_as_admin_cos">Login as Admin CoS</string>
    <string name="login">Login Admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="successful_booking">Successful Booking</string>
    <string name="cos_detail">%s Detail</string>
    <string name="booking_cos_format">Booking %s</string>
    <string name="cos_facility">%s Facility</string>
    <string name="title_facility">Facility</string>
    <string name="price_format">Rp%s/hour</string>
    <string name="price_format_default">Rp%s</string>
    <string name="co_working_space_detail">Co-Working Space Detail</string>
    <string name="co_working_space_facility">Co-Working Space Facility</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="post">Post</string>
    <string name="live_chat">Live Chat</string>
    <string name="logout">Logout</string>
    <string name="cos_post">%s Post</string>
    <string name="view_payment_slip">View Payment Slip</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="create_a_post">Create a Post</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="upload_a_picture">Upload a Picture</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="posting">Posting</string>
    <string name="chats">Chats</string>
    <string name="with_user">with %s</string>
    <string name="data_is_empty">Data is empty!</string>
    <string name="label_capacity">Capacity</string>
    <string name="format_facility">Facility: %s</string>
    <string name="format_max_capacity">Max Capacity: %s people</string>
    <string name="format_capacity">%s people</string>
    <string name="chat_cos">Chat %s</string>
    <string name="booking_cos">Booking</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_day">Select a date</string>
    <string name="label_time">Select a time</string>
    <string name="label_start_hour">Start Hour</string>
    <string name="label_end_hour">End Hour</string>
    <string name="label_hour">Hour</string>
    <string name="label_minute">Minute</string>
    <string name="label_booked_time">Has been booked by other person</string>
    <string name="label_confirm">Confirm</string>
    <string name="format_date">%s-%s-%s</string>
    <string name="format_hour">%s - %s</string>
    <string name="format_time">%s:%s</string>
    <string name="time">Time</string>
    <string name="price_hour">Price/Hour</string>
    <string name="total_price">Total Price</string>
    <string name="booking_now">Booking Now!</string>
    <string name="_0_hour">0 Hour</string>
    <string name="rp0">Rp0</string>
    <string name="label_payment">Payment</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_how_to_pay">How to pay</string>
    <string name="how_to_pay">- Pertama, siapkan terlebih dahulu saldo Anda\n- Kedua, transfer ke nomor rekening 1627382919 dengan nominal transaksi Anda\n- Masukkan PIN Anda\n- Tulis deskripsi transaksi\n- Simpan bukti transfer untuk diunggah pada field dibawah ini</string>
    <string name="label_choose_a_file">Choose a file</string>
    <string name="label_upload_payment_slip">Upload Payment Slip</string>
    <string name="i_have_paid">I Have Paid</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_email">Insert email</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="insert_phone">Insert phone number</string>
    <string name="insert_capacity">Insert Capacity</string>
    <string name="label_reset">Reset</string>
    <string name="label_result_recommendation">Result Recommendation</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="open_google_maps">Open Google Maps</string>
    <string name="recommendation">Recommendation</string>
    <string name="error_username">Please fill the username!</string>
    <string name="error_password">Please fill the password!</string>
    <string name="error_user_password_is_not_matched">Username and password is not matched!</string>
    <string name="success_login">Welcome back!</string>
    <string name="label_welcome">Welcome %s</string>
    <string name="label_done">Done</string>
    <string name="format_message_booking">You have sent a booking to %s. Please wait %s to confirm you booking.\nBooking ID: %s\nName: %s\nEmail: %s\nPhone Number: %s\nDate: %s\nTime: %s - %s\nCapacity: %s people\n%s will confirm your booking within 1x24 hours. If not, you can contact them at %s \nThank you for using CoSpace App!\n\nThis email sent automatically by CoSpace App!</string>
    <string name="format_message_success_booking">Hello %s.\n\nYour booking has been accepted by %s\nBooking ID: %s\nName: %s\nEmail: %s\nPhone Number: %s\nDate: %s\nTime: %s - %s\nCapacity: %s people\n\nYou can arrive at date and time that you have been chosen\nThank you for using CoSpace App!\n\nThis email sent automatically by CoSpace App!</string>
    <string name="format_message_rejected_booking">Hello %s.\n\nYour booking has been rejected by %s\nBooking ID: %s\nName: %s\nEmail: %s\nPhone Number: %s\nDate: %s\nTime: %s - %s\nCapacity: %s people\n\nThe reason is:\n%s\n\nSorry for the inconvenience\n\nThis email sent automatically by CoSpace App!</string>
    <string name="title_select_a_facility">Select a facility</string>
    <string name="add">Add</string>
    <string name="add_a_working_hour">Add a Working Hour</string>
    <string name="label_working_hour">Working Hour</string>
    <string name="select_a_day">Select a day</string>
    <string name="price_per_hour">Price per hour</string>
    <string name="label_address">Address</string>
    <string name="label_save">Save</string>
    <string-array name="adapter_hour">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="adapter_minute">
        <item>00</item>
        <item>30</item>
    </string-array>

    <string-array name="adapter_recommendation">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

    <string-array name="adapter_facility">
        <item>0,AC</item>
        <item>1,Wifi</item>
        <item>2,WhiteBoard</item>
        <item>3,Pantry</item>
        <item>4,Canteen</item>
        <item>5,Printing</item>
        <item>6,Yoga</item>
    </string-array>

    <string-array name="adapter_working_hour">
        <item>0,Monday</item>
        <item>1,Tuesday</item>
        <item>2,Wednesday</item>
        <item>3,Thursday</item>
        <item>4,Friday</item>
        <item>5,Saturday</item>
        <item>6,Sunday</item>
    </string-array>

</resources>