<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.stefanusdany.cospace.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recommendation"
        android:name="id.stefanusdany.cospace.ui.recommendation.RecommendationFragment"
        android:label="@string/title_recommendation"
        tools:layout="@layout/fragment_recommendation" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="id.stefanusdany.cospace.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_about_cospace"
        android:name="id.stefanusdany.cospace.ui.chat.ChatFragment"
        android:label="@string/title_about_cospace"
        tools:layout="@layout/fragment_chat" />
</navigation>