<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adminCoS.homepage.HomepageAdminActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSuccessfulBooking"
        style="@style/TextContent.large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/grey"
        android:text="@string/successful_booking"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCoSDetail"
        style="@style/TextContent.large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/grey"
        android:text="@string/co_working_space_detail"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnSuccessfulBooking" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCoSFacility"
        style="@style/TextContent.large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/grey"
        android:text="@string/co_working_space_facility"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnCoSDetail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBookingConfirmation"
        style="@style/TextContent.large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/grey"
        android:text="@string/booking_confirmation"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnCoSFacility" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCoSPost"
        style="@style/TextContent.large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/grey"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnBookingConfirmation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLiveChat"
        style="@style/TextContent.large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/grey"
        android:text="@string/live_chat"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnCoSPost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogoutAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_primary"
        android:backgroundTint="@color/dark_red"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>