<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adminCoS.post.CreatePostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_back_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/TextContent.large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/create_a_post"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:text="@string/what_s_on_your_mind"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_view"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet elit vitae arcu ornare vestibulum quis non ante. " />

        <TextView
            android:id="@+id/tvUploadPicture"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp"
            android:text="@string/upload_a_picture"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUploadPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/choose_a_picture"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUploadPicture" />

        <ImageView
            android:id="@+id/ivResultPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnUploadPicture"
            tools:src="@drawable/ic_launcher_background"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_primary"
            android:text="@string/posting"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/ivResultPicture" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>